@@ -82,10 +82,13 @@ Here is a full list of the template files used:
   make calendar archive pages.
 * `trails.tmpl` - Used by the trail plugin to generate links on each page
   that is a member of a trail.
+* `changemail.tmpl` - Used by the changemail plugin to generate mails about
+  changed pages.
 * `editpage.tmpl`, `editconflict.tmpl`, `editcreationconflict.tmpl`,
   `editfailedsave.tmpl`, `editpagegone.tmpl`, `pocreatepage.tmpl`,
   `editcomment.tmpl` `commentmoderation.tmpl`, `renamesummary.tmpl`,
   `passwordmail.tmpl`, `openid-selector.tmpl`, `revert.tmpl` - Parts of ikiwiki's user
   interface; do not normally need to be customised.
+
 
 [[!meta robots="noindex, follow"]]
