@@ -1,0 +1,9 @@
+A change has been made to <TMPL_VAR URL>
+
+To stop these notifications, visit <TMPL_VAR PREFSURL>
+
+<TMPL_IF ISPAGE>
+----
+
+<TMPL_VAR CONTENT>
+<TMPL_IF>
